--- a/templates/by_rubric_class.html
+++ b/templates/by_rubric_class.html
@@ -11,7 +11,7 @@
 
 <hr>
 <h1>{{current_rubric.name}}</h1>
-{{% for bb in bbs %}}
+{% for bb in bbs %}
 
 <p>{{bb.title}} - {{bb.content}}</p>
 <p>{{bb.price}} - {{bb.published}}</p>
